src/css/code.editor.scss
/* ... */
.property-grid-item-value.readonly {
    background-color: #fafafa;
    color: silver;
}

.property-grid-group-items {
    padding-left: 0px;
}

.property-grid-collapse.fa-chevron-down {
    float: left;
    margin-left: -18px;
    margin-top: 1px;
}

.property-grid-collapse.fa-chevron-right {
    float: left;
    margin-left: -15px;
    margin-top: 3px;
}

.property-grid-editor {
    right: 0;
    bottom: 0;
    top: 0;
    left: 0;
    position: absolute;
    border: 0px;
    padding-left: 2px;
    width: 100%;
    background-color: white;
    color: black;
}

.datagrid .property-grid-editor,
.datagrid .property-grid-editor-dropdown input,
.datagrid .property-grid-editor-flag input {
    bottom: initial;
    padding: 2px 4px;
    outline: none;
}

.datagrid input.property-grid-editor, .datagrid select.property-grid-editor {
    border-right: 1px solid #f2cb7f;
}

.datagrid select.property-grid-editor {
    padding-left: 0;
    padding-right: 0;
}

.property-grid-editor input[type=checkbox],
input[type=checkbox].property-grid-editor {
    width: auto;
}

.property-grid-editor-dropdown textarea,
.property-grid-editor-dropdown-fill textarea {
    border: 0px;
    outline: none;
    padding: 0;
    padding-left: 1px;
    padding-right: 1px;
    width: 100%;
    height: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.property-grid-editor-dropdown input,
.property-grid-editor-dropdown-fill input,
.property-grid-editor-flag input {
    border: 0px;
    outline: none;
    padding: 0;
    padding-left: 1px;
    padding-right: 1px;
}

.property-grid-editor-dropdown textarea.single,
.property-grid-editor-dropdown-fill textarea.single {
    white-space: normal;
}

.property-grid-editor-dropdown,
.property-grid-editor-dropdown-fill,
.property-grid-editor-flag {
    border: 1px solid #f2cb7f;
    right: -1px;
    bottom: 0;
    top: 0;
    left: 0;
    position: absolute;
    width: 100%;
    z-index: 100;
    overflow: hidden;
    background-color: white;
    color: black;
}

.datagrid .property-grid-editor-dropdown,
.datagrid .property-grid-editor-dropdown-fill,
.datagrid .property-grid-editor-flag {
    border: 1px solid white;
    border-right: 1px solid #f2cb7f;
}

.datagrid .property-grid-editor-dropdown,
.datagrid .property-grid-editor-flag {
    height: 22px;
}

.property-grid-editor-dropdown-container,
.property-grid-editor-dropdown-fill-container {
    right: 19px;
    position: absolute;
    top: -1px;
    left: 0;
    bottom: 0;
}

.property-grid-editor-dropdown button,
.property-grid-editor-dropdown-fill button,
.property-grid-editor-flag button {
    width: 18px;
    right: 0;
    bottom: 0;
    top: 0;
    position: absolute;
    border: 0px;
    padding: 0;
    text-align: center;
    outline: none;
    color: black;
}

.grid-editor-dropdown {
    z-index: 2147483647;
}

.property-grid-editor-flag-dropdown {
    overflow: auto;
    background-color: white;
    border: 1px solid #f2cb7f;
    color: black;
    outline: none;
    z-index: 2147483647;
}

.property-grid-editor-flag-dropdown label {
    width: 100%;
    display: block;
    padding-left: 2px;
    padding-right: 2px;
    margin: 0px;
}

.property-grid-editor-flag-dropdown label:hover, .property-grid-editor-flag-dropdown div:hover {
    background-color: rgba(135, 206, 250, 0.5);
}

.property-grid-editor-flag-dropdown div {
    padding-left: 2px;
    padding-right: 2px;
    width: 100%;
}

.panel-heading .control-label {
    width: 100%;
    margin: 0px;
    margin-top: 3px;
    margin-left: 5px;
}

.panel-heading {
    padding: 2px;
}

.panel-heading .form-control {
    display: inline-block;
    margin: 0px;
}

.panel-heading {
    min-height: 60px;
}

.path-container {
    display: inline-block;
    position: absolute;
    top: 32px;
}

.path-container input {
    padding: 2px;
    height: auto;
}

.path-container {
    left: 4px;
    right: 4px;
}

.path-container .input-group {
    width: 100%;
    height: 26px;
}

.path-container .input-group button {
    height: 26px;
    padding-top: 2px;
}

#remoteBrowse .dialog-footer .bootstrap-select {
    margin: 0;
    padding: 0;
    height: 29px;
}

.dropdown-menu a.active2 {
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#9eceff+0,3399ff+100 */
    background: #3399ff;

    /* Old browsers */
    background: -moz-linear-gradient(top, #9eceff 0%, #3399ff 100%);

    /* FF3.6-15 */
    background: -webkit-linear-gradient(top, #9eceff 0%, #3399ff 100%);

    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, #9eceff 0%, #3399ff 100%);

    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9eceff', endColorstr='#3399ff',GradientType=0 );

    /* IE6-9 */
    color: white;
}

.dropdown-menu > li > a:focus, .dropdown-menu > li > a.active {
    background-color: #e8e8e8;
    background-image: -webkit-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
    background-image: -o-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
    background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e8e8e8));
    background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
    background-repeat: repeat-x;
}

.dropdown-menu > li > a.active {
    border-top: 1px solid #66afe9;
    border-bottom: 1px solid #66afe9;
}

.dropdown-menu > li > a.main {
    font-weight: bold;
}

.dropdown-menu > li > a.sub {
    padding-left: 40px;
}

#remote-navigate {
    overflow: auto;
}

.edit-dropdown ul {
    overflow: auto;
}

.wizard-page {
    height: 100%;
    width: 100%;
    text-align: left;
    font-size: 12pt;
}

.wizard-page .bootstrap-select.form-control {
    height: 30px;
}

.wizard-page .control-label {
    width: 100%;
    margin-bottom: 0;
}
/* ... */

